Allow users to enter a comment when flagging an item as mature or as a copyright violation.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -99,11 +99,17 @@ tagRemoveConfirm = Are you sure you would like to remove the tag {0}?
 tagFlag = Report...
 tagMatureFlag = Mature
 tagCopyrightFlag = Copyright
-tagMaturePrompt = If you believe that this item should be marked as only visible \
-  to mature members please report it for review.
-tagCopyrightPrompt = If you believe that this item violates the rights of a \
-  copyright holder, please report it for review.
-tagFlagFlag = Report
+tagMaturePrompt1 = If you believe that this item should be marked as only visible to mature \
+  members please report it for review.
+tagMaturePrompt2 = You may also enter an explanation as to why you believe the item should be \
+  marked. Entering an explanation may expedite the review.
+tagCopyrightPrompt1 = If you believe that this item violates the rights of a copyright holder, \
+  please report it for review.
+tagCopyrightPrompt2 = Also, please provide an explanation as to why the item is in violation and \
+  include a link to a reputable web site showing the copied material with proof of the date of \
+  creation. This will greatly expedite the review process.
+tagFlagDialogTitle = Report Item
+tagFlagDialogAccept = Report
 tagSelectOne = Select one...
 tagThanks = This item has been reported for review by Whirled admins. \
   Thanks for helping to keep the catalog ship shape!
