Cleaned up item flag review panel and show comments

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -35,7 +35,7 @@ viewBureaus = View Bureau Activity
 panopticonStatus = Panopticon Status
 
 supportControls = Support functions:
-reviewButton = Review Flagged Items
+reviewButton = Review Item Flags
 affMapButton = View affiliate mappings
 promosButton = Promotions
 contestsButton = Contests
@@ -66,9 +66,9 @@ invitesSuccess = {0} have been issued {1} invites.
 #
 # Review Popup
 
-reviewTitle = Flagged Items
+reviewTitle = Item Flags
 
-reviewNoItems = There are no flagged items to review.
+reviewNoItems = There are no item flags to review.
 reviewReload = Reload
 reviewDelist = Delist
 reviewDelisted = The item has been delisted.
