Eclipse needs the new jars too.

--- a/.classpath
+++ b/.classpath
@@ -117,5 +117,8 @@
 	<classpathentry kind="lib" path="extlibs/java/gwt-dnd.jar"/>
 	<classpathentry kind="lib" path="extlibs/java/advanced-components-1.4.1.jar"/>
 	<classpathentry kind="lib" path="extlibs/java/gwt-incubator.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/jaxb/jaxb-api.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/facebook-java-api-schema.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/facebook-java-api.jar"/>
 	<classpathentry kind="output" path="dist/classes"/>
 </classpath>
