More logon related revampery. The Facebook Connect bits are part of the LogonPanel (in cases where we can fit it). We also show a logon UI on the account creation page so that we can just always send people to one page where they can logon or create an account. Still need to fix the awesome hardcoded background.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -18,10 +18,9 @@ indexLogon = Please logon above to access account information.
 # CreateAccountPanel
 
 createTitle = Welcome to Whirled!
+createLogon = Already have an Account? Logon!
 createIntro = Create a Free Whirled Account
 createCoins = Get 1000 free coins when you sign up!
-createAlreadyMember = Already a member?
-createLogonLink = Logon!
 
 createEmail = Email address:
 createEmailTip = You''ll use your email address to logon. We care about our players \
