--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -67,9 +67,11 @@ nonSupportNameInvalid = ''Agent'' is reserved for Whirled staff. Sorry.
 # Logon panel
 
 logonEmail = Email:
-logonEmailDefault = your email address
+logonEmailDefault = <email address>
+logonEmailPlease = Please enter your email address.
 logonPassword = Password:
-logonLogon = Go!
+logonFacebook = Or use your Facebook account:
+logonLogon = Logon
 forgotPassword = Forgot?
 
 forgotPasswordHelp = Enter the email address under which your account is \
