Let's be less forceful about that.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -18,7 +18,7 @@ indexLogon = Please logon above to access account information.
 # CreateAccountPanel
 
 createTitle = Welcome to Whirled!
-createLogon = Already have an Account? Logon!
+createLogon = Already have an Account? Logon
 createIntro = Create a Free Whirled Account
 createCoins = Get 1000 free coins when you sign up!
 
