* Added a link displaying the current exchange rate on bar-listed items, going to the wiki page on Currency. * Implemented change in coins when buying coin-listed items with bars.  This was already mostly implemented by Ray -- this just performs the appropriate transactions and ties it into the UI.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -351,6 +351,7 @@ passportCategory_creation = Create
 
 m_item_bought = Purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_magicfree = Magic-purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
+m_change_received = Received change from purchase of <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_sold = Sold <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_affiliate = Referred player <a href="/#people-{1}">{0}</a> purchased an item.
 m_item_charity = The player <a href="/#people-{1}">{0}</a> made a donation while purchasing an item. 
