--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -55,6 +55,8 @@ listingListed = Listed on:
 listingBuy = Buy!
 
 listingBuyBars = Get bars!
+listingCoinChange = You will receive {0} coins in change.
+listingExchangeRate = Exchanged at about {0} coins per bar.
 
 listingDelist = Delist
 listingDelistConfirm = Are you sure you want to remove this shop listing?
