Add medals to the profile page.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -68,7 +68,7 @@ esex = Sex
 elocation = Location
 egreeterLabel = Friendly
 egreeterTip = Tick here to become a Whirled Friendly Person. Your name will be displayed to new \
-	players and you will automatically accept all friend requests.
+    players and you will automatically accept all friend requests.
 
 sexMale = Male
 sexFemale = Female
@@ -136,6 +136,10 @@ trophiesTitle = Game Trophies
 #
 # StampsBlurb
 stampsTitle = Passport Stamps
+
+#
+# MedalsBlurb
+medalsTitle = Group Medals
 
 #
 # CommentsBlurb
@@ -273,9 +277,9 @@ galleriesTitle = Galleries
 #
 # SharePanel
 shareIntro = Invite Friends to Whirled and earn Coins, Bars and Bling! Have fun with more friends, \
-	and earn 30% of everything they spend at the Shop. If you invite lots of friends, you could \
-	earn enough to Cash Out your Bling into real money! \
-	<a href="http://wiki.whirled.com/Affiliate">Details</a>
+    and earn 30% of everything they spend at the Shop. If you invite lots of friends, you could \
+    earn enough to Cash Out your Bling into real money! \
+    <a href="http://wiki.whirled.com/Affiliate">Details</a>
 shareLinkToWhirled = <a href="/#people-invites_links">Add cool Whirled graphics</a> for your site! \
     Or just use this URL:
 shareSendEmail = Send Email to Friends
