Make the "see all" link on the medals blurb take you to the medals, not the stamps.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -138,6 +138,7 @@ passportPlayerNotFound = The player was not found.
 passportStampsLink = Passport Stamps
 passportMedalsLink = Group Medals
 passportMedalsTitle = {0}''s Group Medals
+passportUnrecognizedContent = Invalid content type
 
 #
 # Transaction history
