Big fat bernie revamp of the way we handle Facebook Connect. Now everything is confined to the ACCOUNT page and we don't keep an FBConnect session live in the outer frame.
We may end up adding FB Connect back out there, but I want to see what I can do
with the server-side FB API since it's probably going to be a jillion times
simpler to publish stories from the server than to send all the necessary info
down to the client where the Flash client will have to send the data to GWT or
talk to FB Connect directly, both of which are a PITA.

Also moved the EditAccountPanel back into the ACCOUNT section. I don't know why
I moved it into the ME page a while back. Perhaps I was gripped with fever. The
commit message did says something about the little green people and their
peculiar demands...

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -10,11 +10,6 @@ accountTitle = Account
 welcomeTitle = Welcome!
 
 #
-# index
-
-indexLogon = Please logon above to access account information.
-
-#
 # CreateAccountPanel
 
 createTitle = Welcome to Whirled!
@@ -70,12 +65,79 @@ creatingAccount = Signing up...
 creatingDone = Logging in for the first time...
 
 #
+# EditAccountPanel
+
+editTitle = My Account
+editMustLogon = Please logon to view your account information.
+
+editTip = You can update your account information above.
+
+editRealNameHeader = Update Real Name
+editRealNameTip = Real Name is for searching purposes only.  It will never be displayed.
+editRealName = Real Name:
+realNameUpdated = Real Name updated.
+
+editEmailHeader = Update Email Address
+editEmail = Email address:
+
+emailUpdated = Email address updated. Remember, this new address must be used \
+  next time you log onto Whirled.
+
+editEPrefsHeader = Update Email Preferences
+
+editWhirledMailEmail = Whirled Mail:
+editWhirledMailEmailTip = Send email when you receive a Whirled mail.
+
+editAnnounceEmail = Announcements:
+editAnnounceEmailTip = Send email when we have announcements about Whirled.
+
+eprefsUpdated = Email preferences updated.
+
+editPasswordHeader = Update Password
+editPassword = New password:
+editConfirm = Confirm:
+
+editMissingConfirm = Reenter your password to confirm it.
+editPasswordMismatch = The passwords you''ve entered do not yet match.
+
+passwordUpdated = Your password has been updated.
+
+editPermaName = Permaname:
+editPermaNameTip = <b>Note:</b> your Permaname can never be changed once it is set.<br> \
+  You must create a Permaname to log onto the Wiki and the Forums.
+
+editPermaShort = Your Permaname must be at least four characters long.
+editPermaLong = Your Permaname cannot be more than twelve characters long.
+editPermaInvalid = Your Permaname can only contain letters, numbers and \
+  underscore and must start with a letter.
+
+permaNameConfigured = Your Permaname has been configured. Note: you must use \
+  your Permaname to log onto the Forums and the Wiki. We plan to fix this in \
+  the future.
+
+charitiesHeader = Charities
+charities = Whenever you make a purchase in Whirled, a donation will be made to the charity of \
+    your choice.  You can select the charity below.  Selecting 'Random Charity' will automatically \
+    select from one of these charities at random.
+selectCharity = Select charity:
+defaultCharity = <Random Charity>
+echarityUpdated = The selected charity has been successfully updated.
+
+fbconnectHeader = Facebook Connect
+fbconnectWhy = Connect your Whirled and Facebook accounts to:\n\
+  <ul><li>Automatically friend any of your Facebook friends that have also linked their \
+  accounts.</li>\n\
+  <li>Make it easier for Facebook friends to find you on Whirled.</li>\n\
+  <li>Let your Facebook friends know what you''re up to in Whirled!</li>\n\
+  </ul>
+fbconnectLink = Connect Accounts:
+
+#
 # Logon page
 
 logonPageTitle = Logon
 
 lpLogonHeader = Logon with your Whirled account here:
-lpSubmit = Logon
 
 lpFBHeader = Logon with your Facebook account here:
 
@@ -140,3 +202,9 @@ welcomeFree = Whirled is <span class="Free">free</span>! Get coins by playing fu
 welcomeNextTitle = NEXT, click the <em>Me</em> tab in the top left of this page.
 welcomeNextTip = The "Me" page is your home base in Whirled. From there you can see \
   which of your friends are online, read your news and find fun things to do.
+
+#
+# FullLogonPanel
+
+logonFacebook = Or use your Facebook account:
+logonLogon = Logon
