Add medal awards to the feed.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -34,6 +34,8 @@ friendGainedLevel = {0} reached level {1}.
 friendsGainedLevel = Your friends have reached new levels: {0}.
 friendWonBadge = {0} earned the {1} stamp.
 friendWonBadges = {0} earned the {1} stamps.
+friendWonMedal = {0} earned the {1} medal.
+friendWonMedals = {0} earned the {1} medals.
 
 andCombine = {0} and {1}
 commaCombine = {0}, {1}
