--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -93,10 +93,10 @@ getStuffBuy1 = Buy an image in the shop and use it on your <a href="#people-me">
   to <a href="http://wiki.whirled.com/Edit_Your_Room">decorate a room</a>.
 getStuffCreate1 = Create a <a href="#people-create">gallery</a> to show off your photos and \
   artwork to the world.
-  
-getStuffBuy2 = 
-getStuffCreate2 = 
-  
+
+getStuffBuy2 =
+getStuffCreate2 =
+
 getStuffBuy3 = Buy furniture and use it to \
   <a href="http://wiki.whirled.com/Edit_Your_Room">decorate a clubhouse</a> for you and your \
   friends.
@@ -146,7 +146,7 @@ getStuffCreate10 = Check out the <a href="http://wiki.whirled.com/Create_Toys">t
 
 editorWikiLink1 = Learn how to create your own images on our \
   <a href="http://wiki.whirled.com/Image">wiki</a>
-editorWikiLink2 = 
+editorWikiLink2 =
 editorWikiLink3 = Learn how to create your own furniture on our \
   <a href="http://wiki.whirled.com/Create_Furniture">wiki</a>
 editorWikiLink4 = Learn how to create your own games on our \
@@ -154,20 +154,20 @@ editorWikiLink4 = Learn how to create your own games on our \
 editorWikiLink5 = Learn how to create your own avatars on our \
   <a href="http://wiki.whirled.com/Create_avatars">wiki</a>.
 editorWikiLink6 = Learn how to create your own pets on our \
-  <a href="http://wiki.whirled.com/Create_pets">wiki</a> 
+  <a href="http://wiki.whirled.com/Create_pets">wiki</a>
 editorWikiLink7 = Learn how to upload music on our \
-  <a href="http://wiki.whirled.com/Music">wiki</a> 
+  <a href="http://wiki.whirled.com/Music">wiki</a>
 editorWikiLink8 = Learn how to upload videos on our \
-  <a href="http://wiki.whirled.com/Uploading_Videos">wiki</a> 
+  <a href="http://wiki.whirled.com/Uploading_Videos">wiki</a>
 editorWikiLink9 = Learn how to create your own backdrops on our \
-  <a href="http://wiki.whirled.com/Create_backdrops">wiki</a> 
+  <a href="http://wiki.whirled.com/Create_backdrops">wiki</a>
 editorWikiLink10 = Learn how to create your own toys on our \
-  <a href="http://wiki.whirled.com/Create_toys">wiki</a> 
-editorWikiLink11 = 
-editorWikiLink12 = 
-editorWikiLink13 = 
-editorWikiLink14 = 
-editorWikiLink15 = 
+  <a href="http://wiki.whirled.com/Create_toys">wiki</a>
+editorWikiLink11 =
+editorWikiLink12 =
+editorWikiLink13 =
+editorWikiLink14 =
+editorWikiLink15 =
 
 #
 # Image Editing blurb (top below divider)
@@ -175,7 +175,7 @@ editorWikiLink15 =
 editorBlurb1 = Images must be GIF, PNG or JPG format.  You can add them to \
   <a href="#world-home">your room</a> like furniture, or create a \
   <a href="#people-create">Gallery</a> to display them.  Animated GIFs don''t work inside rooms.
-editorBlurb2 = 
+editorBlurb2 =
 editorBlurb3 = Furniture can either an image or a SWF file. If your furniture is interactive \
   instead of just animated, you should consider uploading it as a toy.
 editorBlurb4 = Whirled games are developed in ActionScript 3 (AS3) either using the \
@@ -195,12 +195,12 @@ editorBlurb9 = Backdrops can be images (GIF, PNG, or JPG format images) or Flash
 editorBlurb10 = Toys in Whirled are interactive, so they can only be SWF files.  If you want \
   to create a picture of a toy that doesn''t move, create <a href="#stuff-c_3">Furniture</a> \
   instead.
-editorBlurb11 = 
-editorBlurb12 = 
-editorBlurb13 = 
-editorBlurb14 = 
-editorBlurb15 = 
-  
+editorBlurb11 =
+editorBlurb12 =
+editorBlurb13 =
+editorBlurb14 =
+editorBlurb15 =
+
 #
 # Listing pricing modes
 
@@ -354,7 +354,7 @@ m_item_magicfree = Magic-purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_change_received = Received change from purchase of <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_sold = Sold <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_affiliate = Referred player <a href="/#people-{1}">{0}</a> purchased an item.
-m_item_charity = The player <a href="/#people-{1}">{0}</a> made a donation while purchasing an item. 
+m_item_charity = The player <a href="/#people-{1}">{0}</a> made a donation while purchasing an item.
 m_item_refund = Refund received for {0}.
 m_item_refunded = Issued refund for {0}.
 m_played_game = Award from playing <a href="/#games-d_{1}">{0}</a>.
@@ -382,4 +382,5 @@ feedCategory3 = New Shop Listings
 feedCategory4 = Game Trophies
 feedCategory5 = Updated Rooms
 feedCategory6 = Passport Stamps
-feedCategory7 = Levelling
+feedCategory7 = Group Medals
+feedCategory8 = Levelling
