Let's call it Facebook ID rather than account.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -206,5 +206,5 @@ welcomeNextTip = The "Me" page is your home base in Whirled. From there you can 
 #
 # FullLogonPanel
 
-logonFacebook = Or use your Facebook account:
+logonFacebook = Or use your Facebook ID:
 logonLogon = Logon
