Finish wiring up connecting an existing Whirled account to a Facebook account.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -131,6 +131,8 @@ fbconnectWhy = Connect your Whirled and Facebook accounts to:\n\
   <li>Let your Facebook friends know what you''re up to in Whirled!</li>\n\
   </ul>
 fbconnectLink = Connect Accounts:
+fbconnectOverride = Your Facebook ID is already associated with another Whirled account. \
+  Do you want to switch your Facebook Account over to this account instead?
 
 #
 # Logon page
