Medal deletion for support+.  Some styling is needed, but the functionality is there.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -80,6 +80,12 @@ passportStampsLink = Passport Stamps
 passportMedalsLink = Group Medals
 passportMedalsTitle = {0}''s Group Medals
 passportUnrecognizedContent = Invalid content type
+passportDeleteMedal = Delete Medal
+passportDeleteConfirmation = Are you sure you wish to delete the {0} medal from the {1} group from \
+this user?
+passportDeleteYes = Yes
+passportDeleteNo = No
+passportDeleteSuccessful = Medal deleted successfully.
 
 #
 # Transaction history
