- Added a Group setting that controls who may start parties:   member (default) or manager. - Cleaned out some old 'background' stuff in GroupRecord,   there was a TODO to do so. - Honor this new setting. Unfortunately we don't presently   know on the client which of your groups will reject you...

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -10,9 +10,9 @@ policyPublic = Public
 policyInvite = Invitation Only
 policyExclusive = Exclusive
 
-forumPermsAll = Anyone
-forumPermsMember = Members
-forumPermsManager = Managers
+permsAll = Anyone
+permsMember = Members
+permsManager = Managers
 
 errUnknownPolicy = Internal Error! Unknown policy type: {0}
 
@@ -34,6 +34,7 @@ editName = Name
 editLogo = Logo
 editHomepage = Homepage URL
 editPolicy = Policy
+partyPerm = Start a party
 editThread = Start thread
 editPost = Post reply
 editBlurb = Headline
