Provide information on all of an account's external authentication sources in AccountInfo, use that to show a different UI in the Facebook section if we're already wired up. At some point I think we're supposed to implement the ability to break the connection. We'll do that... later.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -131,6 +131,7 @@ fbconnectWhy = Connect your Whirled and Facebook accounts to:\n\
   <li>Let your Facebook friends know what you''re up to in Whirled!</li>\n\
   </ul>
 fbconnectLink = Connect Accounts:
+fbconnectActive = This account is connected to a Facebook account.
 fbconnectOverride = Your Facebook ID is already associated with another Whirled account. \
   Do you want to switch your Facebook Account over to this account instead?
 
