Let's not reuse that status message.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -132,6 +132,7 @@ fbconnectWhy = Connect your Whirled and Facebook accounts to:\n\
   </ul>
 fbconnectLink = Connect Accounts:
 fbconnectActive = This account is connected to a Facebook account.
+fbconnectSuccess = Your Whirled account is now connected to your Facebook account. Yay!
 fbconnectOverride = Your Facebook ID is already associated with another Whirled account. \
   Do you want to switch your Facebook Account over to this account instead?
 
