Styles and improved prompt text for the medal deletion feature.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -81,8 +81,8 @@ passportMedalsLink = Group Medals
 passportMedalsTitle = {0}''s Group Medals
 passportUnrecognizedContent = Invalid content type
 passportDeleteMedal = Delete Medal
-passportDeleteConfirmation = Are you sure you wish to delete the {0} medal from the {1} group from \
-this user?
+passportDeleteConfirmation = Are you sure you wish to remove this player''s "{0}" medal, awarded \
+by the "{1}" group?
 passportDeleteYes = Yes
 passportDeleteNo = No
 passportDeleteSuccessful = Medal deleted successfully.
