--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -85,7 +85,7 @@ passportDeleteConfirmation = Are you sure you wish to remove this player''s "{0}
 by the "{1}" group?
 passportDeleteYes = Yes
 passportDeleteNo = No
-passportDeleteSuccessful = Medal deleted successfully.
+passportDeleteSuccessful = Medal removed successfully.
 
 #
 # Transaction history
