Award selection for the profile page.  It's not displaying there yet, but it does get shuffled off to the DB.  Display should be a quick implementation.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -83,9 +83,11 @@ passportUnrecognizedContent = Invalid content type
 passportDeleteMedal = Delete Medal
 passportDeleteConfirmation = Are you sure you wish to remove this player''s "{0}" medal, awarded \
 by the "{1}" group?
-passportDeleteYes = Yes
-passportDeleteNo = No
+passportYes = Yes
+passportNo = No
 passportDeleteSuccessful = Medal removed successfully.
+passportSelectConfirmation = Do you wish to display this award on your profile?
+passportSelectSuccessful = The award will now be displayed on your profile.
 
 #
 # Transaction history
