--- a/build.xml
+++ b/build.xml
@@ -300,7 +300,7 @@
           file="${basedir}/${log4j_bureau_config}"/>
     <copy tofile="${deploy.dir}/ehcache.xml" file="${basedir}/${ehcache_config}"/>
 
-    <!-- generate our index.html and crossdomain.xml -->
+    <!-- generate index.html, crossdomain.xml and js/facebook.js -->
     <propertyregex property="server_url_host" input="${server_url}"
                    regexp="http://([^:]*)(:[0-9]+)?/" replace="\1"/>
     <copy file="pages/index.html.in" tofile="pages/index.html" overwrite="true">
@@ -318,6 +318,11 @@
         <filter token="SERVER_URL_HOST" value="${server_url_host}"/>
         <filter token="MEDIA_URL_HOST" value="${media_url_host}"/>
         <filter token="HTTP_PORT" value="${http_port}"/>
+      </filterset>
+    </copy>
+    <copy file="pages/js/facebook.js.in" tofile="pages/js/facebook.js" overwrite="true">
+      <filterset>
+        <filter token="FB_API_KEY" value="${facebook.api_key}"/>
       </filterset>
     </copy>
 
@@ -1050,6 +1055,7 @@
     <delete file="pages/media/MediaStub.swf"/>
     <delete file="pages/index.html"/>
     <delete file="pages/crossdomain.xml"/>
+    <delete file="pages/js/facebook.js"/>
     <delete><fileset dir="${gsrc.dir}" includes="**/*Messages.java"/></delete>
     <delete><fileset dir="data/swiftly/whirled_sdk/lib" includes="*.swc"/></delete>
   </target>
