A little explanatory message for the passport page.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -88,6 +88,7 @@ passportNo = No
 passportDeleteSuccessful = Medal removed successfully.
 passportSelectConfirmation = Do you wish to display this award on your profile?
 passportSelectSuccessful = The award will now be displayed on your profile.
+passportSelectionInstructions = Click on an earned award below to display it on your profile.
 
 #
 # Transaction history
