Added Now Loading widget to the Me, Groups, and Shop pages.  Need to test in browsers other than FF.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -249,3 +249,8 @@ yesterday = Yesterday
 # ContestBox
 
 contestPrizes = Prizes
+
+#
+# Loading widget
+nowLoading = Loading...
+loadFinishing = Finishing...
