Display the chosen award on the profile.  I look forward to the day when we blow our current profile out of the water and redesign it from the ground up.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -79,6 +79,10 @@ visitHome = Visit Home
 browseItems = Browse Items
 seeRooms = View Rooms
 
+awardEarned = Earned {0}
+awardMedal = Group Medal
+awardBadge = Passport Stamp
+
 #
 # InterestsBlurb
 
