Quick revamp of recent "force invite" A/B test into the "find friends" A/B test. For B group show a special invite panel rebranded "Find Friends". New version has no banner, just some large white text and a couple of other text changes. Also made "we will not spam" text more clear and removed some unused i18n strings. Some drive by formatting fixes.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -200,12 +200,16 @@ friendsWhoseFriendsAndGreeters = {0}''s Friends And Friendly People
 # InvitePanel
 
 inviteTitle = Invite Friends
+justRegInviteTitle = Find Friends
 
 inviteBanner = Whirled is even more fun with friends! Because we appreciate \
   you spreading the word, we''ll give you <b>1000</b> coins for each friend \
   you invite that signs up.
 
+justRegInviteBanner = Find Your Friends on Whirled!
+
 inviteManualTitle = Add the friends you want to invite:
+justRegInviteManualTitle = Add the friends you want to find:
 inviteFriendName = Enter your friend''s name...
 inviteFriendEmail = Enter your friend''s e-mail...
 inviteInvalidEmail = The e-mail address is improperly formatted.
@@ -230,20 +234,16 @@ inviteListName = Name
 inviteListRemove = Remove
 inviteListEmail = E-mail
 
-inviteSendTip = Enter your friends'' email addresses (each on a new line).
-inviteAddresses = Addresses:
 inviteFrom = From:
 inviteCustom = Add an optional custom message...
 inviteMessage = Your friends will be automatically added to your Friends list when they accept \
   your invitation.
 inviteAnonymous = Anonymous
 inviteButton = Send Invites!
-inviteNote = We will never spam your friends, and will use their e-mail only to \
-  send this invitation.
+inviteNote = We will never spam your friends, and will only use their e-mail if they are not \
+  already members of Whirled and you click "Send Invites" below.
 
 inviteInvalidAddress = Invalid email addresses found: {0}
-inviteTooMany = Too many addresses ({0}): you have {1} invitations available
-inviteDuplicateAddress = Duplicate email address found: {0}
 inviteEnterAddresses = Please enter at least 1 address to send an invitation
 
 inviteResults = Send Invitation Results
