--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -253,4 +253,4 @@ contestPrizes = Prizes
 #
 # Loading widget
 nowLoading = Loading...
-loadFinishing = Finishing...
+loadFinishing = Displaying...
