Get rid of the manual email entry for "justRegistered" mode. Also changed text for the instructions for justRegsitered mode which precipitated a layout change specific to that mode.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -209,7 +209,6 @@ inviteBanner = Whirled is even more fun with friends! Because we appreciate \
 justRegInviteBanner = Find Your Friends on Whirled!
 
 inviteManualTitle = Add the friends you want to invite:
-justRegInviteManualTitle = Add the friends you want to find:
 inviteFriendName = Enter your friend''s name...
 inviteFriendEmail = Enter your friend''s e-mail...
 inviteInvalidEmail = The e-mail address is improperly formatted.
@@ -218,6 +217,8 @@ inviteAdd = Add
 inviteInvalidName = Please enter your friend''s name.
 
 inviteGrabber = Or import e-mail addresses from your webmail account:
+justRegInviteGrabber = Enter you web mail account and we''ll check if any of your contacts are \
+  already members of Whirled:
 inviteSupported = Supported Accounts
 inviteSupportedList = <b>Supported Accounts:</b><br>MSN Hotmail<br>Yahoo<br>Gmail<br>AOL<br>\
  Lycos<br>RediffMail<br>.Mac<br>mail.com<br>FastMail.FM<br>Web.de<br>MyNet.com
