Allow gwt reboot to give a message, also remove "Now" and "Abort" since we don't seem to actually support those

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -1,4 +1,3 @@
-#
 # $Id$
 #
 # Defines Admin interface translation strings
@@ -42,9 +41,11 @@ contestsButton = Contests
 browseButton = Player Browser
 
 adminReboot = Rebootski:
-rebootNow = Now!!!1!
+adminRebootMessage = Message:
+rebootInTwo = 2 minutes
 rebootInFive = 5 minutes
 rebootInFifteen = 15 minutes
+rebootInThirty = 30 minutes
 rebootCancel = Oops! Abort!1!!
 
 rebootScheduled = Reboot scheduled for {0} minutes.
