Parse long msoy invoker units and summarize in log emails

--- a/etc/log4j-production.properties
+++ b/etc/log4j-production.properties
@@ -6,7 +6,7 @@
 # Writes to an auto-rotated log file
 log4j.rootLogger = INFO, fileappender
 
-log4j.appender.fileappender = com.threerings.util.OOOFileAppender
+log4j.appender.fileappender = com.threerings.msoy.server.util.MsoyFileAppender
 log4j.appender.fileappender.layout = org.apache.log4j.PatternLayout
 log4j.appender.fileappender.layout.ConversionPattern = %d %p %C{1}: %m%n
 log4j.appender.fileappender.File = log/world-server.log
