--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -56,6 +56,7 @@ detailUpprice = Update Pricing
 
 detailViewListing = View in Shop
 
+detailSubList = List
 detailSubUplist = Update
 detailSubEdit = Edit
 detailRename = Rename
