Fancied up the noclient icon.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -31,6 +31,8 @@ promptTitle = Question
 
 charRemaining = (Characters remaining: {0})
 
+goHome = Go to your Home
+
 #
 # Navigation menu and header
 
