Switched the hover image to a PNG so that it antialiases nicely. Changed text to just "Your Home". Revamped layout so that the hover area is not the entire horizontal space but just the image and the text (oh how I wish HTML didn't try to jam text layout and GUI structural layout into the same conceptual model).

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -26,12 +26,9 @@ edit = Edit
 noGuests = Please logon above to access the Whirled.
 bareTitle = Whirled
 windowTitle = Whirled - {0}
-
 promptTitle = Question
-
 charRemaining = (Characters remaining: {0})
-
-goHome = Go to your Home
+goHome = Your Home
 
 #
 # Navigation menu and header
