Add the group name to the feed message for medal awards.  In doing this I've discovered that medal awards don't aggregate... digging into that next.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -34,8 +34,10 @@ friendGainedLevel = {0} reached level {1}.
 friendsGainedLevel = Your friends have reached new levels: {0}.
 friendWonBadge = {0} earned the {1} stamp.
 friendWonBadges = {0} earned the {1} stamps.
-friendWonMedal = {0} earned the {1} medal.
-friendWonMedals = {0} earned the {1} medals.
+friendWonMedal = {0} earned the {1}.
+
+medal = {0} medal from {1}
+medalNoGroup = {0} medal
 
 andCombine = {0} and {1}
 commaCombine = {0}, {1}
