--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -34,10 +34,10 @@ friendGainedLevel = {0} reached level {1}.
 friendsGainedLevel = Your friends have reached new levels: {0}.
 friendWonBadge = {0} earned the {1} stamp.
 friendWonBadges = {0} earned the {1} stamps.
-friendWonMedal = {0} earned the {1}.
+friendWonMedal = {0} earned {1}.
 
-medal = {0} medal from {1}
-medalNoGroup = {0} medal
+medal = the {0} medal from {1}
+medalNoGroup = the {0} medal
 
 andCombine = {0} and {1}
 commaCombine = {0}, {1}
