--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -69,6 +69,9 @@ elocation = Location
 egreeterLabel = Friendly
 egreeterTip = Tick here to become a Whirled Friendly Person. Your name will be displayed to new \
     players and you will automatically accept all friend requests.
+eawardLabel = Award
+eawardTip = Visit your <a href="/#me-passport">Passport</a> to add a Stamp or Group Medal to this \
+    section of your profile.
 
 sexMale = Male
 sexFemale = Female
