Apparently, links embedded in translation files are no good (with all our copious spare time, we should do a translation file audit and remove the scattered embedded links so that nobody else makes the same mistake by looking at the exiting translations as an exmple).
Also, MDB points out that clicking a link here will abandon other edits, and is therefore 
undesireable.  Maybe we'll do something else fancy in the future, but for now this will just be
unlinked.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -70,7 +70,7 @@ egreeterLabel = Friendly
 egreeterTip = Tick here to become a Whirled Friendly Person. Your name will be displayed to new \
     players and you will automatically accept all friend requests.
 eawardLabel = Award
-eawardTip = Visit your <a href="/#me-passport">Passport</a> to add a Stamp or Group Medal to this \
+eawardTip = Visit your Passport to add a Stamp or Group Medal to this \
     section of your profile.
 
 sexMale = Male
